--- a/dimpsey.css
+++ b/dimpsey.css
@@ -124,19 +124,14 @@ img.main {
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 
-@media (min-width: 40em) {
-  /* Bump up size of carousel content */
-  .carousel-caption p {
-    margin-bottom: 1.25rem;
-    font-size: 1.25rem;
-    line-height: 1.4;
+@media only screen and (max-width: 768px) {
+  .thumbnails {
+    display: none;
   }
 
-  .featurette-heading {
-    font-size: 50px;
+  .description, .contact-image {
+    -ms-flex-direction: column-reverse;
+    flex-direction: column-reverse;
+    margin-top: 40px;
   }
-}
-
-@media (min-width: 62em) {
-
 }
