Adding node_modules back in for fun and some styles

--- a/dimpsey.css
+++ b/dimpsey.css
@@ -134,4 +134,9 @@ img.main {
     flex-direction: column-reverse;
     margin-top: 40px;
   }
+
+  .volume-selection-buy-buttons {
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
 }
