Both buy buttons on one page. Structured data test

--- a/dimpsey.css
+++ b/dimpsey.css
@@ -107,8 +107,8 @@ img.main {
 
 /* Center align Shopify buy button */
 
-.shopify-buy-frame {
-  margin: 0 auto;
+.shopify-buy-buttons {
+  min-height: 175px;
 }
 
 /* Featurettes
