--- a/dimpsey.css
+++ b/dimpsey.css
@@ -9,6 +9,49 @@ body {
   background-color: rgb(255 254 242);
 }
 
+/* AGE VERIFICATION POPUP
+-------------------------------------------------- */
+
+.show-modal {
+  display: block;
+}
+
+.modal-backdrop {
+  opacity: 0.75 !important;
+}
+
+.modal-body {
+  position: relative;
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  padding: 5rem;
+  background: #81b5ef;
+  text-align: center;
+}
+
+.modal-body h3 {
+  color: #000;
+}
+
+.btn {
+  border-radius: 0 !important;
+  color: #000;
+  border: 2px solid #f5ae20 !important;
+  padding: .5rem 3rem !important;
+}
+
+.btn:hover {
+  background: #f5ae20;
+  color:  #000;
+  padding: .5rem 3rem !important;
+}
+@media (max-width:768px) {
+  .mobile-margin-bottom{
+    margin-bottom:.5rem;
+  }
+
+}
 
 /* MARKETING CONTENT
 -------------------------------------------------- */
@@ -108,7 +151,7 @@ img.main {
 /* Center align Shopify buy button */
 
 .shopify-buy-buttons {
-  min-height: 175px;
+  text-align: center;
 }
 
 /* Featurettes
