--- a/dimpsey.css
+++ b/dimpsey.css
@@ -9,15 +9,47 @@ body {
   background-color: rgb(255 254 242);
 }
 
+ol {
+  list-style-type: none;
+  counter-reset: item;
+  margin: 0;
+  padding: 0;
+}
+
+ol > li {
+  display: table;
+  counter-increment: item;
+  margin-bottom: 0.6em;
+}
+
+ol > li:before {
+  content: counters(item, ".") ". ";
+  display: table-cell;
+  padding-right: 0.6em;
+}
+
+li ol > li {
+  margin: 0;
+}
+
+li ol > li:before {
+  content: counters(item, ".") " ";
+}
+
 /* AGE VERIFICATION POPUP
 -------------------------------------------------- */
 
 .show-modal {
   display: block;
+  background-color: rgba(97, 97, 97, 0.7);
 }
 
 .modal-backdrop {
   opacity: 0.75 !important;
+}
+
+.modal-content {
+  border: none;
 }
 
 .modal-body {
@@ -26,7 +58,7 @@ body {
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
   padding: 5rem;
-  background: #81b5ef;
+  background-color: rgb(255 254 242);
   text-align: center;
 }
 
