Changes to the terms pages

--- a/dimpsey.css
+++ b/dimpsey.css
@@ -76,6 +76,10 @@ a:hover {
     text-decoration: underline;
 }
 
+main.terms {
+  margin-top:  20px;
+}
+
 /* AGE VERIFICATION POPUP
 -------------------------------------------------- */
 
